# my-template

./: CLAUDE.md  README.md  pyproject.toml
.github/workflows/: ci.yml
dev-ledger/: 2026-07-06.jsonl  2026-07-12.jsonl
scripts/: init.py
src/mytemplate/: __main__.py  cli.py  tool.py
tests/: conftest.py  test_claude_md_seams.py  test_cli.py  test_init_script.py  test_tool.py
