[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "my-template"
version = "0.0.1"
description = "Scaffold for a MyThingsLab My[X] tool — copy, then replace `template`."
authors = [{ name = "Lorenzo Liuzzo", email = "lorenzoliuzzo@outlook.com" }]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
dependencies = ["my-things-core"]

[project.optional-dependencies]
dev = ["pytest>=8", "pytest-cov>=5", "ruff>=0.6", "pre-commit>=3"]

[project.scripts]
mytemplate = "mytemplate.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/mytemplate"]

[tool.ruff]
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.coverage.report]
# Meaningful only now that the package ships a real skeleton; CI runs pytest
# with --cov, so a coverage regression fails the build.
fail_under = 85

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
markers = ["slow: integration/slow tests, excluded from the fast local loop"]
